MapR [SPARK-1297] [Spark 3.5.1 + Java 17] Beeline command execution fails (#1203)